--- a/views/templates/index/index.html
+++ b/views/templates/index/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<meta charset="UTF-8">
+	<title>Title</title>
+	<style>
+		* {margin: 0;padding: 0;}
+	</style>
 </head>
 <body>
 hello world
